Fix overflow scrolling for code blocks

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -232,6 +232,7 @@ pre {
     padding: 5px 10px;
     border-radius: 3px;
     box-shadow: 1px 1px 5px rgba(0,0,0,0.25);
+    overflow: auto;
 }
 
 
